# doordarshan

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: 16431bb0cc81_initial_postgresql_schema.py  3d8afa3d3d80_updated_schemas_and_models.py  5c7f2b59ccb5_initial.py  83cb1cca357a_add_participants_table.py  b4a5c6d7e8f9_add_meetings_and_recordings.py  fdb82b04770b_add_rooms_table.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  meetings.py  participants.py  recordings.py  rooms.py
app/core/: config.py  room_code.py  security.py
app/crud/: crud_meeting.py  crud_participant.py  crud_recording.py  crud_room.py  crud_user.py
app/db/: base.py
app/models/: __init__.py  meeting.py  participant.py  recording.py  room.py  user.py
app/schemas/: meeting.py  participant.py  recording.py  room.py  user.py
client/: dashboard.html  index.html  register.html  room.html
client/css/: style.css
client/js/: auth.js  dashboard.js  room.js  webrtc.js
tests/: test_main.py
