[project]
name = "doordarshan"
version = "1.0.0"
description = "An open-source video conferencing application built with FastAPI for fast and reliable real-time communication."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Doordarshan Contributors" },
]

keywords = [
    "fastapi",
    "webrtc",
    "video-conferencing",
    "websocket",
    "realtime",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "sqlalchemy==2.0.41",
    "alembic==1.16.4",
    "pydantic-settings==2.10.1",
    "email-validator==2.3.0",
    "python-jose[cryptography]==3.5.0",
    "pwdlib[argon2]==0.3.0",
    "python-multipart==0.0.20",
    "websockets==15.0.1",
    "psycopg[binary]==3.2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.2.0",
    "httpx>=0.28.0",
    "black>=25.1.0",
    "ruff>=0.12.0",
    "mypy>=1.17.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
]

ignore = [
    "B008",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = [
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = "app.core.config"
disable_error_code = [
    "call-arg",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = [
    "app",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[build-system]
requires = [
    "setuptools>=75",
    "wheel",
]

build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "app*",
]